# quantnum

./: .gitignore  CMakeLists.txt
include/: BaseInterpolation.h  GenericMatrix.h  GenericVector.h  LinearInterpolation.h  LogicError.h  PolynomialInterpolation.h  SplineInterpolation.h  qndummy.h
include/quantnum/time/: boost_date.h  gregorian_date.h  local_date.h
rquantnum/: DESCRIPTION  NAMESPACE
rquantnum/R/: RcppExports.R  hello.R  testInterpolations.R  testLinear.R
rquantnum/src/: Makevars  RcppExports.cpp  rcpp_hello.cpp  rcpp_interpolations.cpp
src/: BaseInterpolation.cpp  LinearInterpolation.cpp  PolynomialInterpolation.cpp  SplineInterpolation.cpp  qndummy.cpp
src/quantnum/time/: boost_date.cpp  gregorian_date.cpp  local_date.cpp
test/: BaseInterpolationTest.cpp  GenericMatrixTest.cpp  GenericVectorTest.cpp  TestHelpers.h  TestSuite.cpp  testSuite.cpp
test/quantnum/time/: DatesTest.cpp  dates.cpp
